--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ olivine/SanCarlos/__pycache__/
 olivine/KilaueaIki/__pycache__/
 olivine/FTIR/__pycache__/
 olivine/FTIR/__pycache__/
+olivine/.DS_Store
